# AIRobotCoding

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.claude/: launch.json
resources/: resources.qrc
resources/styles/: dark_theme.qss  light_theme.qss
resources/translations/: zh_CN.ts
resources/workpieces/: README.md  nist_index.html
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PluginManager.cpp  PluginManager.h  main.cpp
src/core/: CMakeLists.txt  DataModel.cpp  DataModel.h  EventBus.cpp  EventBus.h  PluginInterface.h
src/modules/cad/: CMakeLists.txt  CadModule.cpp  CadModule.h  StepReader.cpp  StepReader.h  SurfaceAnalyzer.cpp  SurfaceAnalyzer.h
src/modules/grinding/: CMakeLists.txt  GrindingModule.cpp  GrindingModule.h
src/modules/kinematics/: CMakeLists.txt  IKinematics.h  KdlKinematics.cpp  KdlKinematics.h  KinematicsFactory.cpp  KinematicsFactory.h  RobotConfig.h
src/modules/pathplan/: CMakeLists.txt  GrindingPathGenerator.cpp  GrindingPathGenerator.h  PathOptimizer.cpp  PathOptimizer.h  PathPlanModule.cpp  PathPlanModule.h  PathSimulator.cpp  PathSimulator.h
src/modules/robot/: CMakeLists.txt  RobotModule.cpp  RobotModule.h  RosBridge.cpp  RosBridge.h
src/modules/viewer/: CMakeLists.txt  FacePickHandler.cpp  FacePickHandler.h  OccToOsgConverter.cpp  OccToOsgConverter.h  OsgViewerWidget.cpp  OsgViewerWidget.h  PathVisualizer.cpp  PathVisualizer.h  ViewerModule.cpp  ViewerModule.h
src/ui/: CMakeLists.txt
src/ui/panels/: LogPanel.cpp  LogPanel.h  ModelBrowserPanel.cpp  ModelBrowserPanel.h  PathDataPanel.cpp  PathDataPanel.h  PropertyPanel.cpp  PropertyPanel.h  RosMonitorPanel.cpp  RosMonitorPanel.h
src/ui/widgets/: CollapsibleSection.cpp  CollapsibleSection.h
